<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, from Axis &amp; Androids!</string>
    <string name="app_name">Client</string>
    <string name="host">10.0.2.2</string>
    <string name="port">6000</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="show_connections">Connections</string>
    <string name="show_displays">Displays</string>
    <string name="quit">Quit</string>
    <string name="menu_display_mode">Display Mode</string>
    <string name="menu_display_mode_auto">Auto</string>
    <string name="menu_display_mode_idle">Idle</string>
    <string name="menu_display_mode_movie">Movie</string>
    <string name="menu_sync_mode">Sync Mode</string>
    <string name="menu_sync_mode_auto">Auto</string>
    <string name="menu_sync_mode_sync">Sync</string>
    <string name="menu_sync_mode_async">Async</string>

</resources>